Bug 267806 - There is no context menu on editor icon border since KDE 4.6.0
Summary: There is no context menu on editor icon border since KDE 4.6.0
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs, usability
: 314164 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-06 17:46 UTC by Alexander
Modified: 2017-07-06 17:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 5.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2011-03-06 17:46:42 UTC
Version:           git master (using KDE 4.6.0) 
OS:                Linux

After upgrading to KDE 4.6.0 (from 4.5.2 AFAIR) the text editor's icon border (the one that shows bookmarks and breakpoints) doesn't show a context menu anymore.
KDevelop is compiled manually from git (checked out on 2011-03-05).

Reproducible: Always




KDE is from OBS (openSUSE build service), distro is openSUSE 11.3 x86-64.
Comment 1 Kevin Funk 2012-12-01 21:37:53 UTC
What context menu do you need?
Comment 2 Alexander 2012-12-02 07:37:41 UTC
Hello,
there was a context menu with, if I remember it correctly, the following items:
- "Add bookmark"
- "Add breakpoint"
- "Default Click Action" (or something like that) submenu:
--- "Bookmark"
--- "Breakpoint"

I really want to have "Bookmark" as the default action, but since there is no menu, I cannot switch it. Adding bookmarks with a mouse is quite cumbersome now (without this menu).
I suspect the code is still there, but not working.

Thanks!
Comment 3 Kevin Funk 2013-05-10 22:29:41 UTC
*** Bug 314164 has been marked as a duplicate of this bug. ***
Comment 4 Kevin Funk 2017-07-06 17:45:41 UTC
Patch here: https://phabricator.kde.org/D6179
Comment 5 Kevin Funk 2017-07-06 17:57:40 UTC
Git commit f27e8c140a516b88d9617d9e49b0ab6e2adb8360 by Kevin Funk, on behalf of Christoph Roick.
Committed on 06/07/2017 at 17:57.
Pushed by kfunk into branch 'master'.

Reenable icon border menu

Summary:
- current functionality preserved
- allow enabling/disabling bookmarks
- set bookmark or breakpoint as standard left-click action
FIXED-IN: 5.2.0

Test Plan:
Activate icon border and right-click to open menu.
Left-click into icon border to add/remove default mark.

Reviewers: #kdevelop

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D6179

M  +46   -24   debugger/breakpoint/breakpointmodel.cpp
M  +0    -5    shell/textdocument.cpp

https://commits.kde.org/kdevplatform/f27e8c140a516b88d9617d9e49b0ab6e2adb8360