Reenable icon border menu

Summary:
- current functionality preserved
- allow enabling/disabling bookmarks
- set bookmark or breakpoint as standard left-click action

BUG: 267806
FIXED-IN: 5.2.0

Test Plan:
Activate icon border and right-click to open menu.
Left-click into icon border to add/remove default mark.

Reviewers: #kdevelop

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D6179